# StringMist

./: README.md  README_zhcn.md
UseGradlePlugin/: build.gradle
UseGradlePlugin/app/: build.gradle
UseGradlePlugin/app/src/main/cpp/: CMakeLists.txt  blowfish.h  native-lib.cpp
UseGradlePlugin/app/src/main/java/com/wizd/usegradleplugin/: NativeInterface.java
mygradleplugin/: build.gradle
mygradleplugin/src/androidTest/java/com/wizd/mygradleplugin/: ExampleInstrumentedTest.java
mygradleplugin/src/main/: AndroidManifest.xml
mygradleplugin/src/main/groovy/com/wizd/plugin/: PluginImpl.groovy  StringMistExtension.groovy  StringMistPlugin.groovy
mygradleplugin/src/main/java/com/wizd/mygradleplugin/: Blowfish.java  ClassStringField.java  MD5.java  StringMistClassInjector.java  StringMistClassVisitor.java  TextUtils.java
mygradleplugin/src/test/java/com/wizd/mygradleplugin/: ExampleUnitTest.java
